@@ -10,6 +10,7 @@
   <body class="${BODY_CLASS}">
     <header>
       <h1>${BLOG_TITLE}</h1>
+      <p>${BLOG_SHORT_DESC}</p>
     </header>
 
     <nav>
