@@ -35,6 +35,18 @@ pre code {
 padding: 5px;
 }
 
+header h1 {
+margin: 25px 0 0 0;
+padding: 0;
+}
+
+header p {
+text-align: center;
+margin: 0 0 25px 0;
+padding: 0;
+font-size: 70%;
+}
+
 nav {
 display: block;
 width: 90%;
